generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["fullTextSearch"]
  binaryTargets   = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Artist {
  id                  Int                        @id @default(autoincrement())
  name                String
  username            String?
  userId              String? // pixiv 用户id
  bio                 String?
  createdAt           DateTime                   @default(now())
  updatedAt           DateTime                   @updatedAt
  avatar              String?
  backgroundImg       String?
  isStarred           Boolean                    @default(false)
  artworks            Artwork[]
  localImportMappings LocalImportArtistMapping[]

  @@unique([username, userId], name: "unique_username_userid")
  @@index([name(ops: raw("gin_trgm_ops"))], type: Gin)
  @@index([isStarred])
}

model LocalImportArtistMapping {
  id              Int      @id @default(autoincrement())
  artistDirectory String   @unique
  artistId        Int
  artist          Artist   @relation(fields: [artistId], references: [id], onDelete: Cascade)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  @@index([artistId])
}

/// This model contains an expression index which requires additional setup for migrations. Visit https://pris.ly/d/expression-indexes for more info.
model Artwork {
  id                    Int                   @id @default(autoincrement())
  title                 String
  description           String?
  artistId              Int?
  createdAt             DateTime              @default(now())
  updatedAt             DateTime              @updatedAt
  descriptionLength     Int                   @default(0)
  directoryCreatedAt    DateTime?
  imageCount            Int                   @default(0)
  bookmarkCount         Int?
  externalId            String?
  isAiGenerated         Boolean?
  originalUrl           String?
  size                  String?
  sourceDate            DateTime?
  sourceUrl             String?
  thumbnailUrl          String?
  xRestrict             String?
  likeCount             Int                   @default(0)
  metaSource            String?               @unique
  metadataFormat        String?
  pixivAiType           Int?
  pixivType             Int?
  sanityLevel           Int?
  storagePath           String?               @unique
  storageKey            String?               @unique
  createdVia            ArtworkCreationMethod @default(UNKNOWN)
  deletedAt             DateTime?
  archiveLifecycleState ArchiveLifecycleState @default(ACTIVE)
  titleOverridden       Boolean               @default(false)
  descriptionOverridden Boolean               @default(false)
  rawMetadata           ArtworkRawMetadata?
  artist                Artist?               @relation(fields: [artistId], references: [id])
  likes                 ArtworkLike[]
  seriesId              Int?
  series                Series?               @relation(fields: [seriesId], references: [id])
  seriesArtworks        SeriesArtwork[]
  artworkTags           ArtworkTag[]
  images                Image[]
  source                ArtworkSource         @default(PIXIV_IMPORTED)
  externalRefs          ArtworkExternalRef[]
  archiveImports        ArchiveImport[]
  archiveRevisions      ArchiveRevision[]
  relationsFrom         ArtworkRelation[]     @relation("ArtworkRelationFrom")
  relationsTo           ArtworkRelation[]     @relation("ArtworkRelationTo")

  @@unique([externalId])
  @@index([title(ops: raw("gin_trgm_ops"))], type: Gin)
  @@index([description(ops: raw("gin_trgm_ops"))], type: Gin)
  @@index([directoryCreatedAt])
  @@index([imageCount])
  @@index([sourceDate])
  @@index([artistId, sourceDate(sort: Desc), id(sort: Desc)], map: "Artwork_artistId_sourceDate_id_idx")
  @@index([externalId])
  @@index([likeCount])
  @@index([metaSource])
  @@index([metadataFormat])
  @@index([createdVia])
  @@index([deletedAt])
  @@index([archiveLifecycleState])
}

model ArtworkExternalRef {
  id               String                  @id @default(cuid())
  artworkId        Int
  providerKey      String                  @db.VarChar(50)
  externalId       String
  canonicalUrl     String                  @db.Text
  locator          Json
  metadataHash     String?
  fetchedAt        DateTime?
  createdAt        DateTime                @default(now())
  updatedAt        DateTime                @updatedAt
  artwork          Artwork                 @relation(fields: [artworkId], references: [id], onDelete: Cascade)
  snapshots        ArtworkSourceSnapshot[]
  sourceTags       ArtworkTag[]
  archiveImports   ArchiveImport[]
  archiveRevisions ArchiveRevision[]

  @@unique([providerKey, externalId])
  @@index([artworkId])
  @@index([providerKey, fetchedAt])
  @@map("artwork_external_refs")
}

model ArtworkSourceSnapshot {
  id                    String             @id @default(cuid())
  externalRefId         String
  providerSchemaVersion Int                @default(1)
  normalizedMetadata    Json
  rawMetadata           Json
  metadataHash          String
  fetchedAt             DateTime
  createdAt             DateTime           @default(now())
  externalRef           ArtworkExternalRef @relation(fields: [externalRefId], references: [id], onDelete: Cascade)

  @@unique([externalRefId, metadataHash])
  @@index([externalRefId, fetchedAt(sort: Desc)])
  @@map("artwork_source_snapshots")
}

model ArtworkRawMetadata {
  id              Int      @id @default(autoincrement())
  artworkId       Int      @unique
  rawMetadataJson Json
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  artwork         Artwork  @relation(fields: [artworkId], references: [id], onDelete: Cascade)

  @@index([artworkId])
}

model Tag {
  id            Int                      @id @default(autoincrement())
  name          String
  namespace     String                   @default("general") @db.VarChar(50)
  isSystem      Boolean                  @default(false)
  systemKey     String?                  @unique
  createdAt     DateTime                 @default(now())
  updatedAt     DateTime                 @updatedAt
  artworkCount  Int                      @default(0)
  description   String?
  name_zh       String?
  search_vector Unsupported("tsvector")?
  translateType TranslateType            @default(NONE)
  abstract      String?
  image         String?
  name_en       String?
  artworkTags   ArtworkTag[]

  @@unique([namespace, name])
  @@index([name])
  @@index([name_zh]) // 增加索引，提高查询速度
  @@index([name_en]) //  增加索引，提高查询速度
  @@index([artworkCount], map: "Tag_artworkCount_idx")
  @@index([artworkCount(sort: Desc), name], map: "Tag_artworkCount_name_idx")
  // [新增] 告诉 Prisma 这个 GIN 索引是存在的
  // 注意：需要启用 previewFeatures = ["extendedIndexes"]
  @@index([search_vector], type: Gin)
}

model ArtworkTag {
  id          Int                  @id @default(autoincrement())
  artworkId   Int
  tagId       Int
  provenance  ArtworkTagProvenance @default(LEGACY)
  sourceRefId String?
  createdAt   DateTime             @default(now())
  artwork     Artwork              @relation(fields: [artworkId], references: [id], onDelete: Cascade)
  tag         Tag                  @relation(fields: [tagId], references: [id], onDelete: Cascade)
  sourceRef   ArtworkExternalRef?  @relation(fields: [sourceRefId], references: [id], onDelete: SetNull)

  @@unique([artworkId, tagId])
  @@index([tagId, artworkId], map: "ArtworkTag_tagId_artworkId_idx")
  @@index([sourceRefId])
  @@index([provenance])
}

model Image {
  id                  Int                     @id @default(autoincrement())
  path                String
  width               Int?
  height              Int?
  size                BigInt?
  sortOrder           Int                     @default(0)
  artworkId           Int?
  createdAt           DateTime                @default(now())
  updatedAt           DateTime                @updatedAt
  webpAnimationStatus Int?                    @db.SmallInt
  chaptersPath        String?
  chaptersCount       Int                     @default(0)
  chaptersDuration    Float?
  chaptersUpdatedAt   DateTime?
  chaptersHash        String?
  mediaType           MediaType               @default(UNKNOWN)
  artwork             Artwork?                @relation(fields: [artworkId], references: [id])
  videoMetadata       MediaVideoMetadata?
  chapterPreviews     MediaChapterPreview[]
  keyframeSets        MediaVideoKeyframeSet[]

  @@unique([artworkId, path], name: "unique_artwork_path")
  @@index([webpAnimationStatus])
  @@index([chaptersPath])
  @@index([mediaType])
}

model MediaVideoMetadata {
  imageId                   Int               @id
  image                     Image             @relation(fields: [imageId], references: [id], onDelete: Cascade)
  probeStatus               MediaProbeStatus  @default(PENDING)
  probeUpdatedAt            DateTime?
  probeError                String?           @db.Text
  hasAudio                  Boolean?
  audioCodec                String?
  audioChannels             Int?
  videoCodec                String?
  duration                  Float?
  fps                       Float?
  posterStatus              VideoPosterStatus @default(PENDING)
  posterPath                String?
  posterUpdatedAt           DateTime?
  posterError               String?           @db.Text
  manualPosterTimestamp     Float?
  manualPosterSourceSize    BigInt?
  manualPosterSourceMtimeMs BigInt?
  manualPosterWarning       String?           @db.Text
  createdAt                 DateTime          @default(now())
  updatedAt                 DateTime          @updatedAt

  @@index([probeStatus])
  @@index([posterStatus])
  @@index([hasAudio])
}

model MediaChapterPreview {
  id               String               @id @default(cuid())
  imageId          Int
  image            Image                @relation(fields: [imageId], references: [id], onDelete: Cascade)
  chapterOrder     Int
  chapterIndex     Int
  chaptersHash     String
  chapterStart     Float
  captureTime      Float
  status           ChapterPreviewStatus @default(PENDING)
  previewPath      String?
  previewUpdatedAt DateTime?
  error            String?              @db.Text
  createdAt        DateTime             @default(now())
  updatedAt        DateTime             @updatedAt

  @@unique([imageId, chapterOrder])
  @@index([status])
  @@index([imageId, chaptersHash])
}

model MediaVideoKeyframeSet {
  id                  String                 @id @default(cuid())
  imageId             Int
  image               Image                  @relation(fields: [imageId], references: [id], onDelete: Cascade)
  systemJobId         String?                @unique
  systemJob           SystemJob?             @relation(fields: [systemJobId], references: [id], onDelete: SetNull)
  status              VideoKeyframeSetStatus @default(STAGING)
  sourceSize          BigInt
  sourceMtimeMs       BigInt
  policyVersion       Int
  duration            Float
  targetCount         Int
  candidateCount      Int
  completedCandidates Int                    @default(0)
  publishedCount      Int                    @default(0)
  warning             String?                @db.Text
  error               String?                @db.Text
  publishedAt         DateTime?
  createdAt           DateTime               @default(now())
  updatedAt           DateTime               @updatedAt
  frames              MediaVideoKeyframe[]

  @@index([imageId, status])
  @@index([status, updatedAt])
}

model MediaVideoKeyframe {
  id              String                @id @default(cuid())
  setId           String
  set             MediaVideoKeyframeSet @relation(fields: [setId], references: [id], onDelete: Cascade)
  candidateIndex  Int
  captureTime     Float
  path            String?
  status          VideoKeyframeStatus   @default(PENDING)
  luma            Float?
  sharpness       Float?
  perceptualHash  String?               @db.VarChar(64)
  rejectionReason String?               @db.VarChar(80)
  selectedOrder   Int?
  error           String?               @db.Text
  createdAt       DateTime              @default(now())
  updatedAt       DateTime              @updatedAt

  @@unique([setId, candidateIndex])
  @@index([setId, status])
  @@index([setId, selectedOrder])
}

model UserBA {
  id            String   @id @default(cuid())
  name          String?
  email         String?  @unique
  emailVerified Boolean?
  image         String?
  password      String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  accounts Account[]
  sessions Session[]
  likes    ArtworkLike[]
  settings UserSetting[]
}

model Account {
  id            String   @id @default(cuid())
  userId        String
  type          String?
  providerId    String
  accountId     String
  refresh_token String?  @db.Text
  access_token  String?  @db.Text
  expires_at    Int?
  token_type    String?
  scope         String?
  id_token      String?  @db.Text
  session_state String?
  password      String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  user UserBA @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([providerId, accountId])
}

model Session {
  id        String   @id @default(cuid())
  token     String   @unique
  userId    String
  expiresAt DateTime
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  user      UserBA   @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model ArtworkLike {
  id        Int      @id @default(autoincrement())
  userId    String
  artworkId Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  artwork   Artwork  @relation(fields: [artworkId], references: [id], onDelete: Cascade)
  user      UserBA   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, artworkId])
  @@index([artworkId])
  @@index([userId])
}

model Setting {
  id        Int      @id @default(autoincrement())
  key       String   @unique
  value     String?
  type      String   @default("string")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model UserSetting {
  id        Int      @id @default(autoincrement())
  userId    String
  key       String
  value     String?
  type      String   @default("string")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      UserBA   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, key])
  @@index([userId])
}

model TriggerLog {
  id            Int      @id @default(autoincrement())
  operation     String   @db.VarChar(10)
  table_name    String   @db.VarChar(50)
  record_id     Int?
  old_value     Int?
  new_value     Int?
  error_message String?  @db.Text
  created_at    DateTime @default(now()) @db.Timestamp()

  @@index([created_at], map: "idx_trigger_log_created_at")
  @@index([operation], map: "idx_trigger_log_operation")
  @@index([table_name, record_id], map: "idx_trigger_log_table_record")
}

enum TranslateType {
  NONE // 0-无
  PIXIV // 1-pixiv
  AI // 2-AI
  MANUAL // 3-人工标注
}

model SystemJob {
  id                   String                 @id @default(cuid())
  type                 String                 @db.VarChar(80)
  definitionVersion    Int                    @default(1)
  status               JobStatus              @default(PENDING)
  triggerSource        JobTriggerSource       @default(SYSTEM)
  requestedByUserId    String?
  scheduledTaskId      String?
  scheduledForDate     String?                @db.VarChar(10)
  idempotencyKey       String?                @unique @db.VarChar(180)
  payload              Json?
  progress             Int                    @default(0)
  stage                String?                @db.VarChar(80)
  message              String?                @db.Text
  result               Json?
  errorCode            String?                @db.VarChar(80)
  error                String?                @db.Text
  skipReason           JobSkipReason?
  skippedAt            DateTime?
  targetImageId        Int?
  targetPath           String?                @db.Text
  mode                 String?                @db.VarChar(50)
  startedAt            DateTime?
  lastAttemptStartedAt DateTime?
  heartbeatAt          DateTime?
  finishedAt           DateTime?
  cancelRequestedAt    DateTime?
  pauseRequestedAt     DateTime?
  attempt              Int                    @default(0)
  maxAttempts          Int                    @default(3)
  parentJobId          String?
  parentJob            SystemJob?             @relation("SystemJobChildren", fields: [parentJobId], references: [id], onDelete: SetNull)
  childJobs            SystemJob[]            @relation("SystemJobChildren")
  queuePriority        Int                    @default(100)
  effectivePriority    Int                    @default(100)
  availableAt          DateTime?              @default(now())
  deadlineAt           DateTime?
  workerId             String?                @db.VarChar(120)
  leaseToken           String?                @db.Uuid
  leaseExpiresAt       DateTime?
  createdAt            DateTime               @default(now())
  updatedAt            DateTime               @updatedAt
  scheduledTask        ScheduledTask?         @relation(fields: [scheduledTaskId], references: [id], onDelete: SetNull)
  events               SystemJobEvent[]
  resourceLeases       JobResourceLease[]
  gcEntries            DerivedMediaGcEntry[]
  scanRuns             ScanRun[]
  pendingReplaceBatch  PendingReplaceBatch?
  archiveImport        ArchiveImport?
  keyframeSet          MediaVideoKeyframeSet?

  @@unique([scheduledTaskId, scheduledForDate])
  @@index([type, status])
  @@index([type, status, createdAt])
  @@index([type, status, finishedAt])
  @@index([type, targetImageId, createdAt])
  @@index([parentJobId, status])
  @@index([type, status, queuePriority, availableAt, createdAt])
  @@index([status, effectivePriority, availableAt, createdAt])
  @@index([status, deadlineAt])
  @@index([status, leaseExpiresAt])
  @@index([scheduledTaskId, createdAt])
  @@index([createdAt])
  @@map("system_jobs")
}

model SystemJobEvent {
  id        BigInt        @id @default(autoincrement())
  jobId     String
  type      String        @db.VarChar(50)
  level     JobEventLevel @default(INFO)
  attempt   Int           @default(0)
  workerId  String?       @db.VarChar(120)
  stage     String?       @db.VarChar(80)
  progress  Int?
  message   String?       @db.Text
  data      Json?
  createdAt DateTime      @default(now())
  job       SystemJob     @relation(fields: [jobId], references: [id], onDelete: Cascade)

  @@index([jobId, id])
  @@index([createdAt])
  @@map("system_job_events")
}

model JobResourceLease {
  resourceKey String    @id @db.VarChar(180)
  ownerJobId  String
  workerId    String    @db.VarChar(120)
  leaseToken  String    @db.Uuid
  expiresAt   DateTime
  heartbeatAt DateTime
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  ownerJob    SystemJob @relation(fields: [ownerJobId], references: [id], onDelete: Cascade)

  @@index([ownerJobId])
  @@map("job_resource_leases")
}

model DerivedMediaGcEntry {
  id              String        @id @default(cuid())
  mediaKind       String        @db.VarChar(50)
  relativePath    String        @db.Text
  referenceType   String?       @db.VarChar(50)
  referenceId     String?       @db.VarChar(120)
  reason          String        @db.VarChar(80)
  status          GcEntryStatus @default(PENDING)
  notBefore       DateTime
  attempt         Int           @default(0)
  maxAttempts     Int           @default(3)
  lastSystemJobId String?
  error           String?       @db.Text
  deletedAt       DateTime?
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  lastSystemJob   SystemJob?    @relation(fields: [lastSystemJobId], references: [id], onDelete: SetNull)

  @@unique([mediaKind, relativePath])
  @@index([status, notBefore, createdAt])
  @@index([lastSystemJobId])
  @@map("derived_media_gc_entries")
}

model ArchiveImport {
  id                 String              @id @default(cuid())
  systemJobId        String              @unique
  providerKey        String              @db.VarChar(50)
  externalId         String
  externalRefId      String?
  submittedUrl       String              @db.Text
  canonicalUrl       String              @db.Text
  locator            Json
  status             ArchiveImportStatus @default(PENDING)
  requestedQuality   ArchiveQuality      @default(ORIGINAL)
  selectedQuality    ArchiveQuality      @default(ORIGINAL)
  decisionCode       String?             @db.VarChar(80)
  normalizedMetadata Json
  rawMetadata        Json
  metadataHash       String
  creatorBucket      String              @db.VarChar(180)
  stagingPath        String              @unique @db.Text
  totalItems         Int                 @default(0)
  completedItems     Int                 @default(0)
  failedItems        Int                 @default(0)
  warning            String?             @db.Text
  errorCode          String?             @db.VarChar(80)
  errorMessage       String?             @db.Text
  publishedArtworkId Int?
  startedAt          DateTime?
  finishedAt         DateTime?
  retainUntil        DateTime?
  cleanupRequestedAt DateTime?
  createdAt          DateTime            @default(now())
  updatedAt          DateTime            @updatedAt
  systemJob          SystemJob           @relation(fields: [systemJobId], references: [id], onDelete: Cascade)
  externalRef        ArtworkExternalRef? @relation(fields: [externalRefId], references: [id], onDelete: SetNull)
  publishedArtwork   Artwork?            @relation(fields: [publishedArtworkId], references: [id], onDelete: SetNull)
  items              ArchiveImportItem[]
  publishedRevision  ArchiveRevision?

  @@index([providerKey, externalId])
  @@index([status, createdAt])
  @@index([publishedArtworkId])
  @@index([externalRefId])
  @@index([cleanupRequestedAt])
  @@map("archive_imports")
}

model ArchivePreviewSession {
  id           String   @id @default(cuid())
  providerKey  String   @db.VarChar(50)
  externalId   String
  resolved     Json
  metadataHash String
  expiresAt    DateTime
  createdAt    DateTime @default(now())

  @@index([expiresAt])
  @@index([providerKey, externalId])
  @@map("archive_preview_sessions")
}

model ArchiveImportItem {
  id               String                  @id @default(cuid())
  archiveImportId  String
  pageIndex        Int
  sourcePageUrl    String                  @db.Text
  locator          Json
  expectedFilename String
  status           ArchiveImportItemStatus @default(PENDING)
  attempts         Int                     @default(0)
  stagedPath       String?                 @db.Text
  byteCount        BigInt?
  mimeType         String?                 @db.VarChar(120)
  quality          ArchiveQuality?
  width            Int?
  height           Int?
  sha256           String?                 @db.VarChar(64)
  errorCode        String?                 @db.VarChar(80)
  errorMessage     String?                 @db.Text
  errorStage       String?                 @db.VarChar(40)
  remoteHost       String?                 @db.VarChar(300)
  startedAt        DateTime?
  finishedAt       DateTime?
  createdAt        DateTime                @default(now())
  updatedAt        DateTime                @updatedAt
  archiveImport    ArchiveImport           @relation(fields: [archiveImportId], references: [id], onDelete: Cascade)

  @@unique([archiveImportId, pageIndex])
  @@index([archiveImportId, status])
  @@map("archive_import_items")
}

model ArchiveRevision {
  id              String             @id @default(cuid())
  artworkId       Int
  externalRefId   String
  archiveImportId String?            @unique
  archivePath     String             @db.Text
  manifestPath    String             @db.Text
  mediaSnapshot   Json
  metadataHash    String
  isCurrent       Boolean            @default(false)
  trashPath       String?            @db.Text
  trashedAt       DateTime?
  purgeAfter      DateTime?
  publishedAt     DateTime           @default(now())
  createdAt       DateTime           @default(now())
  artwork         Artwork            @relation(fields: [artworkId], references: [id], onDelete: Cascade)
  externalRef     ArtworkExternalRef @relation(fields: [externalRefId], references: [id], onDelete: Restrict)
  archiveImport   ArchiveImport?     @relation(fields: [archiveImportId], references: [id], onDelete: SetNull)

  @@index([artworkId, publishedAt(sort: Desc)])
  @@index([externalRefId])
  @@index([purgeAfter])
  @@map("archive_revisions")
}

model ArtworkRelation {
  id            String              @id @default(cuid())
  fromArtworkId Int
  toArtworkId   Int
  type          ArtworkRelationType
  providerKey   String?             @db.VarChar(50)
  createdAt     DateTime            @default(now())
  fromArtwork   Artwork             @relation("ArtworkRelationFrom", fields: [fromArtworkId], references: [id], onDelete: Cascade)
  toArtwork     Artwork             @relation("ArtworkRelationTo", fields: [toArtworkId], references: [id], onDelete: Cascade)

  @@unique([fromArtworkId, toArtworkId, type])
  @@index([toArtworkId, type])
  @@map("artwork_relations")
}

model PendingReplaceBatch {
  id             String                    @id @default(cuid())
  systemJobId    String?                   @unique
  systemJob      SystemJob?                @relation(fields: [systemJobId], references: [id], onDelete: SetNull)
  status         PendingReplaceBatchStatus @default(PREVIEWED)
  sourceRoot     String                    @db.Text
  totalItems     Int                       @default(0)
  readyItems     Int                       @default(0)
  invalidItems   Int                       @default(0)
  excludedItems  Int                       @default(0)
  succeededItems Int                       @default(0)
  failedItems    Int                       @default(0)
  restoredItems  Int                       @default(0)
  backupBytes    BigInt                    @default(0)
  startedAt      DateTime?
  finishedAt     DateTime?
  createdAt      DateTime                  @default(now())
  updatedAt      DateTime                  @updatedAt
  items          PendingReplaceItem[]

  @@index([status, createdAt])
  @@index([createdAt])
  @@map("pending_replace_batches")
}

model PendingReplaceItem {
  id                  String                   @id @default(cuid())
  batchId             String
  batch               PendingReplaceBatch      @relation(fields: [batchId], references: [id], onDelete: Cascade)
  artworkId           Int?
  externalId          String?
  artworkTitle        String?
  artistName          String?
  sourceDirectory     String                   @db.Text
  sourceDirectoryName String
  targetDirectory     String?                  @db.Text
  status              PendingReplaceItemStatus
  included            Boolean                  @default(true)
  fingerprint         String?
  sourceManifest      Json
  oldMediaSnapshot    Json
  newMediaSnapshot    Json
  targetFileSnapshot  Json
  warnings            Json
  error               String?                  @db.Text
  backupDirectory     String?                  @db.Text
  completedDirectory  String?                  @db.Text
  startedAt           DateTime?
  finishedAt          DateTime?
  createdAt           DateTime                 @default(now())
  updatedAt           DateTime                 @updatedAt

  @@index([batchId, status])
  @@index([artworkId])
  @@index([externalId])
  @@map("pending_replace_items")
}

enum PendingReplaceBatchStatus {
  PREVIEWED
  RUNNING
  CANCELLING
  COMPLETED
  PARTIAL_FAILED
  CANCELLED
}

enum PendingReplaceItemStatus {
  READY
  INVALID
  EXCLUDED
  STAGING
  BACKING_UP
  SWAPPING
  COMMITTING
  SUCCESS
  ROLLING_BACK
  RESTORING
  RESTORE_SWAPPING
  FAILED
  RESTORED
  BACKUP_CLEANED
}

model ScanRun {
  id                String        @id @default(cuid())
  systemJobId       String?
  systemJob         SystemJob?    @relation(fields: [systemJobId], references: [id], onDelete: SetNull)
  type              ScanRunType
  mode              ScanRunMode
  status            ScanRunStatus @default(RUNNING)
  startedAt         DateTime      @default(now())
  finishedAt        DateTime?
  durationMs        Int?
  totalArtworks     Int           @default(0)
  processedArtworks Int           @default(0)
  succeededArtworks Int           @default(0)
  skippedArtworks   Int           @default(0)
  failedArtworks    Int           @default(0)
  newArtists        Int           @default(0)
  newTags           Int           @default(0)
  newImages         Int           @default(0)
  errorMessage      String?       @db.Text
  logRef            String?       @db.Text
  createdAt         DateTime      @default(now())
  updatedAt         DateTime      @updatedAt
  items             ScanRunItem[]

  @@index([startedAt])
  @@index([status, startedAt])
  @@index([type, mode, startedAt])
  @@index([systemJobId])
  @@map("scan_runs")
}

model ScanRunItem {
  id                   String            @id @default(cuid())
  scanRunId            String
  scanRun              ScanRun           @relation(fields: [scanRunId], references: [id], onDelete: Cascade)
  externalId           String?
  title                String?
  artistName           String?
  relativeDirectory    String?           @db.Text
  metadataRelativePath String?           @db.Text
  status               ScanRunItemStatus
  action               ScanRunItemAction
  mediaCount           Int               @default(0)
  newImageCount        Int               @default(0)
  errorMessage         String?           @db.Text
  startedAt            DateTime          @default(now())
  finishedAt           DateTime?
  durationMs           Int?
  createdAt            DateTime          @default(now())
  updatedAt            DateTime          @updatedAt

  @@index([scanRunId, status])
  @@index([scanRunId, action])
  @@index([externalId])
  @@map("scan_run_items")
}

enum ScanRunType {
  PIXIV
  LOCAL_IMPORT
  LOCAL_CREATE
  BATCH_IMPORT
}

enum ScanRunMode {
  FULL
  INCREMENTAL
  CLIENT_LIST
  RESCAN
  LOCAL_RESCAN
  LOCAL_DIRECTORY_IMPORT
  LOCAL_CREATE
  BATCH_CREATE
  BATCH_REGISTER_IMAGES
}

enum ScanRunStatus {
  RUNNING
  COMPLETED
  FAILED
  CANCELLED
}

enum ScanRunItemStatus {
  SUCCESS
  SKIPPED
  FAILED
}

enum ScanRunItemAction {
  CREATE
  UPDATE
  SKIP_EXISTING
  SKIP_INVALID_METADATA
  SKIP_NO_MEDIA
  FAILED_PARSE
  FAILED_COLLECT
  FAILED_WRITE
}

model ScheduledTask {
  id                   String       @id @default(cuid())
  key                  String       @unique @db.VarChar(80)
  type                 String       @db.VarChar(80)
  enabled              Boolean      @default(false)
  scheduleMode         ScheduleMode @default(DAILY)
  time                 String       @db.VarChar(5)
  timezone             String       @default("Asia/Shanghai") @db.VarChar(50)
  priority             Int          @default(100)
  mutexKey             String?      @db.VarChar(80)
  lastTriggeredAt      DateTime?
  lastTriggeredDate    String?      @db.VarChar(10)
  lastMaterializedAt   DateTime?
  lastMaterializedDate String?      @db.VarChar(10)
  lastJobId            String?
  config               Json?
  createdAt            DateTime     @default(now())
  updatedAt            DateTime     @updatedAt
  jobs                 SystemJob[]

  @@index([enabled, priority])
  @@index([type])
  @@index([mutexKey])
  @@map("scheduled_tasks")
}

enum ScheduleMode {
  DAILY
}

enum JobStatus {
  PENDING
  RUNNING
  PAUSING
  PAUSED
  RETRY_WAIT
  COMPLETED
  FAILED
  CANCELLED
  CANCELLING
  SKIPPED
}

enum JobTriggerSource {
  MANUAL
  SCHEDULE
  SYSTEM
  RETRY
  LEGACY
}

enum JobSkipReason {
  WINDOW_EXPIRED
  DISABLED_BEFORE_START
  SUPERSEDED
  PRECONDITION_NOT_MET
}

enum JobEventLevel {
  INFO
  WARN
  ERROR
}

enum GcEntryStatus {
  PENDING
  PROCESSING
  DELETED
  SKIPPED_REFERENCED
  FAILED
}

enum VideoKeyframeSetStatus {
  STAGING
  PUBLISHED
  FAILED
  CANCELLED
}

enum VideoKeyframeStatus {
  PENDING
  GENERATING
  COMPLETED
  REJECTED
  FAILED
}

enum ArtworkCreationMethod {
  UNKNOWN
  PIXIV_SCAN
  URL_ARCHIVE
  LOCAL_DIRECTORY
  MANUAL_CREATE
}

enum ArtworkTagProvenance {
  SOURCE
  MANUAL
  DERIVED
  LEGACY
}

enum ArchiveImportStatus {
  PENDING
  RUNNING
  PAUSED
  CANCELLING
  COMPLETED
  FAILED
  CANCELLED
}

enum ArchiveImportItemStatus {
  PENDING
  DOWNLOADING
  COMPLETED
  FAILED
}

enum ArchiveQuality {
  ORIGINAL
  DISPLAY
}

enum ArchiveLifecycleState {
  ACTIVE
  TRASHING
  TRASHED
  RESTORING
}

enum ArtworkRelationType {
  REPLACES
}

enum MediaType {
  IMAGE
  VIDEO
  ANIMATION
  UNKNOWN
}

enum MediaProbeStatus {
  PENDING
  PROBING
  COMPLETED
  FAILED
  SKIPPED
}

enum VideoPosterStatus {
  PENDING
  GENERATING
  COMPLETED
  FAILED
}

enum ChapterPreviewStatus {
  PENDING
  GENERATING
  COMPLETED
  FAILED
}

model Series {
  id             Int             @id @default(autoincrement())
  title          String
  description    String?
  coverImageUrl  String?
  source         String          @default("LOCAL") // 用于区分数据来源，'LOCAL'是自己建的，'PIXIV'是导入的
  externalId     String? // 用于存原来的Pixiv 系列 ID，比如 '123456'
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  artworks       Artwork[]
  seriesArtworks SeriesArtwork[]

  // 这个索引让数据库知道：同一个来源下的同一个外部ID，只能有一条记录
  @@unique([source, externalId])
}

// 定义枚举
enum SeriesType {
  LOCAL // 本地创建
  PIXIV // Pixiv 导入
}

enum ArtworkSource {
  LOCAL_CREATED
  PIXIV_IMPORTED
  LOCAL_IMPORT
  URL_ARCHIVE
}

model SeriesArtwork {
  seriesId  Int
  artworkId Int
  sortOrder Int
  series    Series  @relation(fields: [seriesId], references: [id], onDelete: Cascade)
  artwork   Artwork @relation(fields: [artworkId], references: [id], onDelete: Cascade)

  @@unique([seriesId, artworkId])
  @@index([seriesId])
  @@index([artworkId])
}
